# gcs-uri

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_e2e_tests.py
.github/workflows/: publish.yaml
src/: gcs_uri.py
tests/: e2e_test.py
