[tool.poetry]
name = "gcs-uri"
version = "0.1.0"
description = ""
authors = ["Andrew Ross <andrew.ross.mail@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-storage = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pylint = "^2.13.4"
reorder-python-imports = "^3.0.1"
bump2version = "^1.0.1"
pre-commit = "^2.18.1"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
