[tool.poetry]
name = "gcs-uri"
version = "1.3.0"
description = "Simple API to copy files to and from Google Cloud Storage"
authors = [ "Andrew Ross <andrew.ross.mail@gmail.com>" ]
license = "MIT"

readme = "README.md"

keywords = ["google", "cloud", "storage", 'gcp']

homepage = "https://github.com/andrewrosss/gcs-uri"
repository = "https://github.com/andrewrosss/gcs-uri"
documentation = "https://github.com/andrewrosss/gcs-uri"

classifiers = [
    "Programming Language :: Python :: 3.0",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
google-cloud-storage = "^2.0.0"
typing-extensions = { version = ">=3.10", python = "<3.10"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pylint = "^2.13.4"
reorder-python-imports = "^3.0.1"
bump2version = "^1.0.1"
pre-commit = "^2.18.1"
pytest = "^7.1.1"

[tool.pytest.ini_options]
markers = [ "e2e" ]
addopts = "-m 'not e2e'"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
